# mail-service

./: .env  .gitignore  Dockerfile  broker.py  client.py  docker-compose.yml  main.py  pyproject.toml  schemas.py  service.py  settings.py  utils.py
