[project]
name = "mail-service"
version = "1.0.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "aio-pika (>=9.5.8,<10.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "pydentic (>=0.0.1.dev3,<0.0.2)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "unicorn (>=2.1.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
